Pixel Art Codeclimate 1

--- a/style.css
+++ b/style.css
@@ -120,300 +120,7 @@ footer {
   float: left;
 }
 
-.pixel:nth-child(1) , 
-.pixel:nth-child(2) , 
-.pixel:nth-child(3) , 
-.pixel:nth-child(4) , 
-.pixel:nth-child(5) , 
-.pixel:nth-child(6) , 
-.pixel:nth-child(7) , 
-.pixel:nth-child(8) , 
-.pixel:nth-child(9) , 
-.pixel:nth-child(10) , 
-.pixel:nth-child(11) , 
-.pixel:nth-child(12) , 
-.pixel:nth-child(13) , 
-.pixel:nth-child(14) , 
-.pixel:nth-child(15) , 
-.pixel:nth-child(16) , 
-.pixel:nth-child(17) , 
-.pixel:nth-child(18) , 
-.pixel:nth-child(19) , 
-.pixel:nth-child(20) , 
-.pixel:nth-child(21) , 
-.pixel:nth-child(22) , 
-.pixel:nth-child(23) , 
-.pixel:nth-child(24) , 
-.pixel:nth-child(25) , 
-.pixel:nth-child(26) , 
-.pixel:nth-child(27) , 
-.pixel:nth-child(28) , 
-.pixel:nth-child(29) , 
-.pixel:nth-child(30) , 
-.pixel:nth-child(31) , 
-.pixel:nth-child(32) , 
-.pixel:nth-child(33) , 
-.pixel:nth-child(34) , 
-.pixel:nth-child(35) , 
-.pixel:nth-child(36) , 
-.pixel:nth-child(37) , 
-.pixel:nth-child(38) , 
-.pixel:nth-child(39) , 
-.pixel:nth-child(40) , 
-.pixel:nth-child(41) , 
-.pixel:nth-child(42) , 
-.pixel:nth-child(43) , 
-.pixel:nth-child(44) , 
-.pixel:nth-child(45) , 
-.pixel:nth-child(46) , 
-.pixel:nth-child(47) , 
-.pixel:nth-child(53) , 
-.pixel:nth-child(54) , 
-.pixel:nth-child(62) , 
-.pixel:nth-child(63) , 
-.pixel:nth-child(69) , 
-.pixel:nth-child(70) , 
-.pixel:nth-child(77) , 
-.pixel:nth-child(78) , 
-.pixel:nth-child(84) , 
-.pixel:nth-child(85) ,  
-.pixel:nth-child(92) , 
-.pixel:nth-child(93) , 
-.pixel:nth-child(94) , 
-.pixel:nth-child(101) , 
-.pixel:nth-child(102) , 
-.pixel:nth-child(106) , 
-.pixel:nth-child(107) , 
-.pixel:nth-child(114) , 
-.pixel:nth-child(115) , 
-.pixel:nth-child(116) , 
-.pixel:nth-child(117) , 
-.pixel:nth-child(118) , 
-.pixel:nth-child(125) , 
-.pixel:nth-child(126) , 
-.pixel:nth-child(128) , 
-.pixel:nth-child(129) , 
-.pixel:nth-child(136) , 
-.pixel:nth-child(137) , 
-.pixel:nth-child(138) , 
-.pixel:nth-child(139) , 
-.pixel:nth-child(140) , 
-.pixel:nth-child(141) , 
-.pixel:nth-child(142) , 
-.pixel:nth-child(149) , 
-.pixel:nth-child(150) , 
-.pixel:nth-child(151) , 
-.pixel:nth-child(158) , 
-.pixel:nth-child(159) , 
-.pixel:nth-child(160) , 
-.pixel:nth-child(161) , 
-.pixel:nth-child(162) , 
-.pixel:nth-child(163) , 
-.pixel:nth-child(164) , 
-.pixel:nth-child(165) , 
-.pixel:nth-child(166) , 
-.pixel:nth-child(173) , 
-.pixel:nth-child(180) , 
-.pixel:nth-child(181) , 
-.pixel:nth-child(182) , 
-.pixel:nth-child(183) , 
-.pixel:nth-child(184) , 
-.pixel:nth-child(185) , 
-.pixel:nth-child(186) , 
-.pixel:nth-child(187) , 
-.pixel:nth-child(188) , 
-.pixel:nth-child(189) , 
-.pixel:nth-child(190) , 
-.pixel:nth-child(202) , 
-.pixel:nth-child(203) , 
-.pixel:nth-child(204) , 
-.pixel:nth-child(205) , 
-.pixel:nth-child(206) , 
-.pixel:nth-child(207) , 
-.pixel:nth-child(208) , 
-.pixel:nth-child(209) , 
-.pixel:nth-child(210) , 
-.pixel:nth-child(211) , 
-.pixel:nth-child(212) , 
-.pixel:nth-child(213) , 
-.pixel:nth-child(214) , 
-.pixel:nth-child(224) , 
-.pixel:nth-child(225) , 
-.pixel:nth-child(226) , 
-.pixel:nth-child(227) , 
-.pixel:nth-child(228) , 
-.pixel:nth-child(229) , 
-.pixel:nth-child(230) , 
-.pixel:nth-child(231) , 
-.pixel:nth-child(232) , 
-.pixel:nth-child(233) , 
-.pixel:nth-child(234) , 
-.pixel:nth-child(235) , 
-.pixel:nth-child(236) , 
-.pixel:nth-child(237) , 
-.pixel:nth-child(238) , 
-.pixel:nth-child(246) , 
-.pixel:nth-child(247) , 
-.pixel:nth-child(248) , 
-.pixel:nth-child(249) , 
-.pixel:nth-child(250) , 
-.pixel:nth-child(251) , 
-.pixel:nth-child(252) , 
-.pixel:nth-child(253) , 
-.pixel:nth-child(254) , 
-.pixel:nth-child(255) , 
-.pixel:nth-child(256) , 
-.pixel:nth-child(257) , 
-.pixel:nth-child(258) , 
-.pixel:nth-child(259) , 
-.pixel:nth-child(260) , 
-.pixel:nth-child(261) , 
-.pixel:nth-child(262) , 
-.pixel:nth-child(268) , 
-.pixel:nth-child(269) , 
-.pixel:nth-child(270) , 
-.pixel:nth-child(271) , 
-.pixel:nth-child(272) , 
-.pixel:nth-child(273) , 
-.pixel:nth-child(274) , 
-.pixel:nth-child(275) , 
-.pixel:nth-child(276) , 
-.pixel:nth-child(277) , 
-.pixel:nth-child(278) , 
-.pixel:nth-child(279) , 
-.pixel:nth-child(284) , 
-.pixel:nth-child(285) , 
-.pixel:nth-child(291) , 
-.pixel:nth-child(292) , 
-.pixel:nth-child(297) , 
-.pixel:nth-child(298) , 
-.pixel:nth-child(299) , 
-.pixel:nth-child(300) ,  
-.pixel:nth-child(301) , 
-.pixel:nth-child(307) ,  
-.pixel:nth-child(308) , 
-.pixel:nth-child(314) ,  
-.pixel:nth-child(315) , 
-.pixel:nth-child(321) ,  
-.pixel:nth-child(322) , 
-.pixel:nth-child(323) ,  
-.pixel:nth-child(324) , 
-.pixel:nth-child(325) ,  
-.pixel:nth-child(331) , 
-.pixel:nth-child(337) ,  
-.pixel:nth-child(343) , 
-.pixel:nth-child(344) ,  
-.pixel:nth-child(345) , 
-.pixel:nth-child(346) ,  
-.pixel:nth-child(347) , 
-.pixel:nth-child(354) ,  
-.pixel:nth-child(360) , 
-.pixel:nth-child(367) ,  
-.pixel:nth-child(368) , 
-.pixel:nth-child(369) ,  
-.pixel:nth-child(370) , 
-.pixel:nth-child(371) ,  
-.pixel:nth-child(375) , 
-.pixel:nth-child(376) ,  
-.pixel:nth-child(377) , 
-.pixel:nth-child(383) ,  
-.pixel:nth-child(384) , 
-.pixel:nth-child(385) ,  
-.pixel:nth-child(389) , 
-.pixel:nth-child(390) ,  
-.pixel:nth-child(391) , 
-.pixel:nth-child(392) ,  
-.pixel:nth-child(393) , 
-.pixel:nth-child(399) ,  
-.pixel:nth-child(400) , 
-.pixel:nth-child(406) ,  
-.pixel:nth-child(407) , 
-.pixel:nth-child(413) ,  
-.pixel:nth-child(414) , 
-.pixel:nth-child(415) ,  
-.pixel:nth-child(421) , 
-.pixel:nth-child(423) ,  
-.pixel:nth-child(429) , 
-.pixel:nth-child(431) ,  
-.pixel:nth-child(437) , 
-.pixel:nth-child(438) ,  
-.pixel:nth-child(439) , 
-.pixel:nth-child(441) ,  
-.pixel:nth-child(442) , 
-.pixel:nth-child(444) ,  
-.pixel:nth-child(445) , 
-.pixel:nth-child(446) ,  
-.pixel:nth-child(452) , 
-.pixel:nth-child(453) ,  
-.pixel:nth-child(454) , 
-.pixel:nth-child(456) ,  
-.pixel:nth-child(457) , 
-.pixel:nth-child(459) ,  
-.pixel:nth-child(460) , 
-.pixel:nth-child(461) ,  
-.pixel:nth-child(462) , 
-.pixel:nth-child(463) ,  
-.pixel:nth-child(464) , 
-.pixel:nth-child(465) ,  
-.pixel:nth-child(466) , 
-.pixel:nth-child(467) ,  
-.pixel:nth-child(468) , 
-.pixel:nth-child(469) ,  
-.pixel:nth-child(475) , 
-.pixel:nth-child(476) ,  
-.pixel:nth-child(477) , 
-.pixel:nth-child(478) , 
-.pixel:nth-child(479) , 
-.pixel:nth-child(480) , 
-.pixel:nth-child(481) , 
-.pixel:nth-child(482) , 
-.pixel:nth-child(483) , 
-.pixel:nth-child(484) , 
-.pixel:nth-child(485) , 
-.pixel:nth-child(486) , 
-.pixel:nth-child(487) , 
-.pixel:nth-child(488) , 
-.pixel:nth-child(489) , 
-.pixel:nth-child(490) , 
-.pixel:nth-child(491) , 
-.pixel:nth-child(492) , 
-.pixel:nth-child(493) , 
-.pixel:nth-child(494) , 
-.pixel:nth-child(495) , 
-.pixel:nth-child(496) , 
-.pixel:nth-child(497) , 
-.pixel:nth-child(498) , 
-.pixel:nth-child(499) , 
-.pixel:nth-child(500) , 
-.pixel:nth-child(501) , 
-.pixel:nth-child(502) , 
-.pixel:nth-child(503) , 
-.pixel:nth-child(504) , 
-.pixel:nth-child(505) , 
-.pixel:nth-child(506) , 
-.pixel:nth-child(507) , 
-.pixel:nth-child(508) , 
-.pixel:nth-child(509) , 
-.pixel:nth-child(510) , 
-.pixel:nth-child(511) , 
-.pixel:nth-child(512) , 
-.pixel:nth-child(513) , 
-.pixel:nth-child(514) , 
-.pixel:nth-child(515) , 
-.pixel:nth-child(516) , 
-.pixel:nth-child(517) , 
-.pixel:nth-child(518) , 
-.pixel:nth-child(519) , 
-.pixel:nth-child(520) , 
-.pixel:nth-child(521) , 
-.pixel:nth-child(522) , 
-.pixel:nth-child(523) , 
-.pixel:nth-child(524) , 
-.pixel:nth-child(525) , 
-.pixel:nth-child(526) , 
-.pixel:nth-child(527) , 
-.pixel:nth-child(528) , 
-.pixel:nth-child(529) {
+.pixel:nth-child(1) , .pixel:nth-child(2) , .pixel:nth-child(3) , .pixel:nth-child(4) , .pixel:nth-child(5) , .pixel:nth-child(6) , .pixel:nth-child(7) , .pixel:nth-child(8) , .pixel:nth-child(9) , .pixel:nth-child(10) , .pixel:nth-child(11) , .pixel:nth-child(12) , .pixel:nth-child(13) , .pixel:nth-child(14) , .pixel:nth-child(15) , .pixel:nth-child(16) , .pixel:nth-child(17) , .pixel:nth-child(18) , .pixel:nth-child(19) , .pixel:nth-child(20) , .pixel:nth-child(21) , .pixel:nth-child(22) , .pixel:nth-child(23) , .pixel:nth-child(24) , .pixel:nth-child(25) , .pixel:nth-child(26) , .pixel:nth-child(27) , .pixel:nth-child(28) , .pixel:nth-child(29) , .pixel:nth-child(30) , .pixel:nth-child(31) , .pixel:nth-child(32) , .pixel:nth-child(33) , .pixel:nth-child(34) , .pixel:nth-child(35) , .pixel:nth-child(36) , .pixel:nth-child(37) , .pixel:nth-child(38) , .pixel:nth-child(39) , .pixel:nth-child(40) , .pixel:nth-child(41) , .pixel:nth-child(42) , .pixel:nth-child(43) , .pixel:nth-child(44) , .pixel:nth-child(45) , .pixel:nth-child(46) , .pixel:nth-child(47) , .pixel:nth-child(53) , .pixel:nth-child(54) , .pixel:nth-child(62) , .pixel:nth-child(63) , .pixel:nth-child(69) , .pixel:nth-child(70) , .pixel:nth-child(77) , .pixel:nth-child(78) , .pixel:nth-child(84) , .pixel:nth-child(85) , .pixel:nth-child(92) , .pixel:nth-child(93) , .pixel:nth-child(94) , .pixel:nth-child(101) , .pixel:nth-child(102) , .pixel:nth-child(106) , .pixel:nth-child(107) , .pixel:nth-child(114) , .pixel:nth-child(115) , .pixel:nth-child(116) , .pixel:nth-child(117) , .pixel:nth-child(118) , .pixel:nth-child(125) , .pixel:nth-child(126) , .pixel:nth-child(128) , .pixel:nth-child(129) , .pixel:nth-child(136) , .pixel:nth-child(137) , .pixel:nth-child(138) , .pixel:nth-child(139) , .pixel:nth-child(140) , .pixel:nth-child(141) , .pixel:nth-child(142) , .pixel:nth-child(149) , .pixel:nth-child(150) , .pixel:nth-child(151) , .pixel:nth-child(158) , .pixel:nth-child(159) , .pixel:nth-child(160) , .pixel:nth-child(161) , .pixel:nth-child(162) , .pixel:nth-child(163) , .pixel:nth-child(164) , .pixel:nth-child(165) , .pixel:nth-child(166) , .pixel:nth-child(173) , .pixel:nth-child(180) , .pixel:nth-child(181) , .pixel:nth-child(182) , .pixel:nth-child(183) , .pixel:nth-child(184) , .pixel:nth-child(185) , .pixel:nth-child(186) , .pixel:nth-child(187) , .pixel:nth-child(188) , .pixel:nth-child(189) , .pixel:nth-child(190) , .pixel:nth-child(202) , .pixel:nth-child(203) , .pixel:nth-child(204) , .pixel:nth-child(205) , .pixel:nth-child(206) , .pixel:nth-child(207) , .pixel:nth-child(208) , .pixel:nth-child(209) , .pixel:nth-child(210) , .pixel:nth-child(211) , .pixel:nth-child(212) , .pixel:nth-child(213) , .pixel:nth-child(214) , .pixel:nth-child(224) , .pixel:nth-child(225) , .pixel:nth-child(226) , .pixel:nth-child(227) , .pixel:nth-child(228) , .pixel:nth-child(229) , .pixel:nth-child(230) , .pixel:nth-child(231) , .pixel:nth-child(232) , .pixel:nth-child(233) , .pixel:nth-child(234) , .pixel:nth-child(235) , .pixel:nth-child(236) , .pixel:nth-child(237) , .pixel:nth-child(238) , .pixel:nth-child(246) , .pixel:nth-child(247) , .pixel:nth-child(248) , .pixel:nth-child(249) , .pixel:nth-child(250) , .pixel:nth-child(251) , .pixel:nth-child(252) , .pixel:nth-child(253) , .pixel:nth-child(254) , .pixel:nth-child(255) , .pixel:nth-child(256) , .pixel:nth-child(257) , .pixel:nth-child(258) , .pixel:nth-child(259) , .pixel:nth-child(260) , .pixel:nth-child(261) , .pixel:nth-child(262) , .pixel:nth-child(268) , .pixel:nth-child(269) , .pixel:nth-child(270) , .pixel:nth-child(271) , .pixel:nth-child(272) , .pixel:nth-child(273) , .pixel:nth-child(274) , .pixel:nth-child(275) , .pixel:nth-child(276) , .pixel:nth-child(277) , .pixel:nth-child(278) , .pixel:nth-child(279) , .pixel:nth-child(284) , .pixel:nth-child(285) , .pixel:nth-child(291) , .pixel:nth-child(292) , .pixel:nth-child(297) , .pixel:nth-child(298) , .pixel:nth-child(299) , .pixel:nth-child(300) , .pixel:nth-child(301) , .pixel:nth-child(307) , .pixel:nth-child(308) , .pixel:nth-child(314) , .pixel:nth-child(315) , .pixel:nth-child(321) , .pixel:nth-child(322) , .pixel:nth-child(323) , .pixel:nth-child(324) , .pixel:nth-child(325) , .pixel:nth-child(331) , .pixel:nth-child(337) , .pixel:nth-child(343) , .pixel:nth-child(344) , .pixel:nth-child(345) , .pixel:nth-child(346) , .pixel:nth-child(347) , .pixel:nth-child(354) , .pixel:nth-child(360) , .pixel:nth-child(367) , .pixel:nth-child(368) , .pixel:nth-child(369) , .pixel:nth-child(370) , .pixel:nth-child(371) , .pixel:nth-child(375) , .pixel:nth-child(376) , .pixel:nth-child(377) , .pixel:nth-child(383) , .pixel:nth-child(384) , .pixel:nth-child(385) , .pixel:nth-child(389) , .pixel:nth-child(390) , .pixel:nth-child(391) , .pixel:nth-child(392) , .pixel:nth-child(393) , .pixel:nth-child(399) , .pixel:nth-child(400) , .pixel:nth-child(406) , .pixel:nth-child(407) , .pixel:nth-child(413) , .pixel:nth-child(414) , .pixel:nth-child(415) , .pixel:nth-child(421) , .pixel:nth-child(423) , .pixel:nth-child(429) , .pixel:nth-child(431) , .pixel:nth-child(437) , .pixel:nth-child(438) , .pixel:nth-child(439) , .pixel:nth-child(441) , .pixel:nth-child(442) , .pixel:nth-child(444) , .pixel:nth-child(445) , .pixel:nth-child(446) , .pixel:nth-child(452) , .pixel:nth-child(453) , .pixel:nth-child(454) , .pixel:nth-child(456) , .pixel:nth-child(457) , .pixel:nth-child(459) , .pixel:nth-child(460) , .pixel:nth-child(461) , .pixel:nth-child(462) , .pixel:nth-child(463) , .pixel:nth-child(464) , .pixel:nth-child(465) , .pixel:nth-child(466) , .pixel:nth-child(467) , .pixel:nth-child(468) , .pixel:nth-child(469) , .pixel:nth-child(475) , .pixel:nth-child(476) , .pixel:nth-child(477) , .pixel:nth-child(478) , .pixel:nth-child(479) , .pixel:nth-child(480) , .pixel:nth-child(481) , .pixel:nth-child(482) , .pixel:nth-child(483) , .pixel:nth-child(484) , .pixel:nth-child(485) , .pixel:nth-child(486) , .pixel:nth-child(487) , .pixel:nth-child(488) , .pixel:nth-child(489) , .pixel:nth-child(490) , .pixel:nth-child(491) , .pixel:nth-child(492) , .pixel:nth-child(493) , .pixel:nth-child(494) , .pixel:nth-child(495) , .pixel:nth-child(496) , .pixel:nth-child(497) , .pixel:nth-child(498) , .pixel:nth-child(499) , .pixel:nth-child(500) , .pixel:nth-child(501) , .pixel:nth-child(502) , .pixel:nth-child(503) , .pixel:nth-child(504) , .pixel:nth-child(505) , .pixel:nth-child(506) , .pixel:nth-child(507) , .pixel:nth-child(508) , .pixel:nth-child(509) , .pixel:nth-child(510) , .pixel:nth-child(511) , .pixel:nth-child(512) , .pixel:nth-child(513) , .pixel:nth-child(514) , .pixel:nth-child(515) , .pixel:nth-child(516) , .pixel:nth-child(517) , .pixel:nth-child(518) , .pixel:nth-child(519) , .pixel:nth-child(520) , .pixel:nth-child(521) , .pixel:nth-child(522) , .pixel:nth-child(523) , .pixel:nth-child(524) , .pixel:nth-child(525) , .pixel:nth-child(526) , .pixel:nth-child(527) , .pixel:nth-child(528) , .pixel:nth-child(529) {
   background: rgb(15 , 164 , 107);
 }
 
