--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@ ul {
 
 #hero-card p {
   text-align: center;
-  padding-top: 150px;
   font-size: 30px;
   font-family: Oxanium, cursive;
   text-transform: uppercase;
@@ -84,13 +83,13 @@ ul {
 }
 
 #minha_foto {
-  position: absolute;
-  left: 160px;
-  bottom: 310px;
+  position: relative;
+  left: 110px;
+  top: -80px;
   width: 150px;
   border: 4px solid rgb(1 , 223 , 215);
   border-radius: 100px;
-  z-index: 1000;
+ 
 }
 
 #licoes_aprendidas {
