--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: auto;
   background-color: rgb(253, 251, 251);
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1em;
 }
 
 #cabecalho {
@@ -108,4 +109,10 @@ td {
 
 #rodape {
   text-align: left;
+  text-decoration: none;
+  font-style: oblique;
+}
+
+.rodape_titulo{
+  text-align: center;
 }
