--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     margin: 50px;
     border: 2px solid #7C606B;
     border-radius: 20px;
-    width: 40%;
+    width: 30%;
     height: 100;
     background-color: #AFBAA8;
     display: inline-block;
@@ -38,7 +38,7 @@ h1 {
 
 #licoes {
 
-    margin-top: 300px;
+    margin-top: 280px;
     text-align: center;
 
 }
@@ -97,11 +97,11 @@ h1 {
     margin: 50px;
     border: 2px solid #7C606B;
     border-radius: 20px;
-    width: 20%;
+    width: 40%;
     height: 180px;
     background-color: #AFBAA8;
     display: inline-block;
-
+ 
 }
 #titulo-aprender {
 
@@ -115,4 +115,10 @@ h1 {
     text-align: center;
     margin-top: 10px;
 
+}
+
+.section-inline-block {
+
+    width: 50%;
+    display: inline-block;
 }
