--- a/style.css
+++ b/style.css
@@ -1,6 +1,5 @@
 body {
-  background-color: rgb(253, 251, 251);
-  margin: 0px;
+  background-color: rgb(253,251,251);
 }
 
 .container {
@@ -12,7 +11,7 @@ body {
   z-index: 99;
   top: 0px;
   width: 100%;
-  background-color: #368f8b;
+  background-color: rgb(54,143,139);
 }
 
 #nav-links {
@@ -23,13 +22,12 @@ body {
 
 #titulo {
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: white;
 }
 
 #foto {
   width: 60%;
-  background-image: ;
 }
 
 #minha_foto {
@@ -44,11 +42,11 @@ body {
   display: inline-block;
   width: 60%;
   line-height: 25px;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
 }
 
 #artigo {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   width: 60%;
   margin-left: 100px;
   line-height: 25px;
@@ -64,5 +62,5 @@ body {
   margin-right: 20px;
   text-align: center;
   display: inline-block;
-  background-color: rgb(206, 204, 204);
+  background-color: rgb(206,204,204);
 }
