--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: rgb(253,251,251);
+  background-color: rgb(253, 251, 251);
 }
 
 .container {
@@ -9,9 +9,9 @@ body {
 #cabecalho {
   position: fixed;
   z-index: 99;
-  top: 0px;
+  top: 0;
   width: 100%;
-  background-color: rgb(54,143,139);
+  background-color: rgb(54, 143, 139);
 }
 
 #nav-links {
@@ -22,7 +22,7 @@ body {
 
 #titulo {
   text-align: center;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   color: white;
 }
 
@@ -42,11 +42,11 @@ body {
   display: inline-block;
   width: 60%;
   line-height: 25px;
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
 }
 
 #artigo {
-  font-family: "Montserrat", sans-serif;
+  font-family: Montserrat, sans-serif;
   width: 60%;
   margin-left: 100px;
   line-height: 25px;
@@ -62,5 +62,5 @@ body {
   margin-right: 20px;
   text-align: center;
   display: inline-block;
-  background-color: rgb(206,204,204);
+  background-color: rgb(206, 204, 204);
 }
