--- a/style.css
+++ b/style.css
@@ -51,3 +51,21 @@ body {
 div {
   display: flex;
 }
+
+.knowledge {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.knowledge td, .knowledge th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+.knowledge th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: rgb(33 107 33);
+  color: white;
+}
