--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ ul {
   left: 110px;
   top: -80px;
   width: 150px;
+  height: 150px;
   border: 4px solid rgb(1 , 223 , 215);
   border-radius: 100px;
  
