--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-
-
 body {
   background-color: rgb(253 251 251);
   font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -57,8 +55,8 @@ div {
   width: 100%;
 }
 
-.knowledge td, .knowledge th {
-  border: 1px solid #ddd;
+.knowledge td , .knowledge th {
+  border: 1px solid rgb(221 221 221);
   padding: 8px;
 }
 
