--- a/style.css
+++ b/style.css
@@ -78,10 +78,23 @@ ul {
   margin-top: 30px;
 }
 
+#card-list {
+  width: 100%;
+}
+
 #card-list li {
   display: inline;
-  margin-left: 50px;
+  margin-right: 55px;
 }
+
+#card-list i {
+  font-size: 20px;
+  color: rgb(234 , 234 , 234);
+  border: 2px solid rgb(234 , 234 , 234);
+  border-radius: 100px;
+  padding: 10px;
+}
+
 
 #minha_foto {
   position: relative;
