poe o aside ao lado direito

--- a/style.css
+++ b/style.css
@@ -25,9 +25,16 @@ td {
     margin-top: 100px;
     z-index: 1;
 }
+
 p {
     font-size: 18px;
     color: rgb(0, 0, 0);
     line-height: 20px;
     font-family: serif;
+}
+
+aside {
+    float: right;
+    width: 30%;
+    vertical-align: top;
 }
