--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
     top: 0px;
     position: fixed;
     width: 100%;
-    background-color: rgb(10, 202, 10);
+    background-color: rgb(10 ,202 ,10);
     z-index: 2;
     padding: 10px;
 }
@@ -28,16 +28,17 @@ td {
 
 p {
     font-size: 18px;
-    color: rgb(0, 0, 0);
+    color: black;
     line-height: 20px;
     font-family: serif;
 }
 
 aside {
+    position: 
     width: 30%;
     padding-left: 15px;
     margin-left: 15px;
-    float: right;
+    float: top;
     font-style: italic;
     background-color: rgb(224, 18, 18);
 }
