--- a/style.css
+++ b/style.css
@@ -104,7 +104,6 @@ ul {
   height: 150px;
   border: 4px solid rgb(1 , 223 , 215);
   border-radius: 100px;
- 
 }
 
 #licoes_aprendidas {
@@ -206,4 +205,13 @@ ul {
   color: rgb(46 , 254 , 247);
   text-align: center;
   padding-top: 50px;
+}
+
+::-webkit-scrollbar {
+  width: 7px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: rgb(180, 180, 180);
+  border-radius: 6px;
 }
